--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "messenger",
-  "version": "1.0.0",
+  "name": "hmmm-chat-pro",
+  "version": "1.1.0",
+  "description": "Elite Private Messenger",
   "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.7.2"
