--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "hmmm-chat-pro",
-  "version": "1.1.0",
-  "description": "Elite Private Messenger",
-  "main": "server.js",
+  "name": "hmmm-chat",
+  "version": "1.0.0",
+  "type": "module",
+  "main": "app.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node app.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "socket.io": "^4.7.2"
+    "express": "^4.19.2",
+    "socket.io": "^4.7.5"
   }
 }
