--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hmmm-chat",
+  "name": "hmmm-chat-pro",
   "version": "1.0.0",
   "type": "module",
   "main": "app.js",
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "express": "^4.19.2",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "multer": "^1.4.5"
   }
 }
