--- a/package.json
+++ b/package.json
@@ -1,14 +1,7 @@
-{
-  "name": "hmmm-chat-pro",
-  "version": "1.0.0",
-  "type": "module",
-  "main": "app.js",
-  "scripts": {
-    "start": "node app.js"
-  },
-  "dependencies": {
-    "express": "^4.19.2",
-    "socket.io": "^4.7.5",
-    "multer": "1.4.5-lts.1"
-  }
+"type": "module",
+"dependencies": {
+  "express": "^4",
+  "socket.io": "^4",
+  "bcrypt": "^5",
+  "multer": "^1"
 }
